kubernetes-networks/canary/current-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-v1-svc
spec:
  selector:
    app: web-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: web-v1
spec:
  rules:
    - host: web.lan
      http:
        paths:
          - backend:
              serviceName: web-v1-svc
              servicePort: 80
            path: /test-web
